--- a/WpfAgendaDatabase/View/ViewAjouterEvent.xaml
+++ b/WpfAgendaDatabase/View/ViewAjouterEvent.xaml
@@ -6,42 +6,56 @@
              xmlns:local="clr-namespace:WpfAgendaDatabase.View"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Background="Aqua" Margin="10">
+    <Grid Background="AliceBlue" Margin="10">
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Row="0" Text="Titre de l'événement :" VerticalAlignment="Center" Margin="0,10"/>
-        <TextBox Grid.Row="1" x:Name="EventTitleTextBox" Margin="0,10" />
+        <!-- Bordure pour le titre -->
+        <Border Grid.Row="0" BorderBrush="Black" BorderThickness="2" Margin="10" CornerRadius="5">
+            <Label FontSize="20" FontWeight="Bold" HorizontalAlignment="Center">
+                <TextBlock Text="Ajouter un Événement :" TextDecorations="Underline"/>
+            </Label>
+        </Border>
 
-        <TextBlock Grid.Row="2" Text="Date et heure de début :" VerticalAlignment="Center" Margin="0,10"/>
-        <StackPanel Grid.Row="3" Orientation="Horizontal" Margin="0,10">
-            <DatePicker x:Name="StartDatePicker"/>
-            <ComboBox x:Name="StartHourComboBox" Width="60" Margin="10,0,0,0"/>
-            <ComboBox x:Name="StartMinuteComboBox" Width="60" Margin="5,0,0,0"/>
-        </StackPanel>
+        <!-- Bordure pour les champs de saisie et les boutons -->
+        <Border Grid.Row="1" BorderBrush="Black" BorderThickness="2" Margin="10" CornerRadius="5" Padding="10">
+            <Grid Margin="10">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
 
-        <TextBlock Grid.Row="4" Text="Date et heure de fin :" VerticalAlignment="Center" Margin="0,10"/>
-        <StackPanel Grid.Row="5" Orientation="Horizontal" Margin="0,10">
-            <DatePicker x:Name="EndDatePicker"/>
-            <ComboBox x:Name="EndHourComboBox" Width="60" Margin="10,0,0,0"/>
-            <ComboBox x:Name="EndMinuteComboBox" Width="60" Margin="5,0,0,0"/>
-        </StackPanel>
+                <Label Grid.Row="0" Content="Titre de l'événement :" VerticalAlignment="Center" Margin="10,0"/>
+                <TextBox Grid.Row="1" x:Name="EventTitleTextBox" Margin="10,0" />
 
-        <Button Content="Sauvegarder" HorizontalAlignment="Center" Margin="0,10" Click="SaveEventButton_Click" Grid.Row="9"/>  
-        <!-- Ajoutez ici d'autres contrôles tels que des boutons pour sauvegarder ou annuler -->
+                <Label Grid.Row="2" Content="Date et heure de début :" VerticalAlignment="Center" Margin="10,0"/>
+                <StackPanel Grid.Row="3" Orientation="Horizontal" Margin="10,0">
+                    <DatePicker x:Name="StartDatePicker"/>
+                    <ComboBox x:Name="StartHourComboBox" Width="60" Margin="10,0,0,0"/>
+                    <ComboBox x:Name="StartMinuteComboBox" Width="60" Margin="5,0,0,0"/>
+                </StackPanel>
 
-        <TextBlock Grid.Row="7" Text="Description de l'événement :" VerticalAlignment="Center" Margin="0,10"/>
-        <TextBox Grid.Row="8" x:Name="EventDescriptionTextBox" Margin="0,10" TextWrapping="Wrap" AcceptsReturn="True" Height="100" VerticalScrollBarVisibility="Auto"/>
+                <Label Grid.Row="4" Content="Date et heure de fin :" VerticalAlignment="Center" Margin="10,0"/>
+                <StackPanel Grid.Row="5" Orientation="Horizontal" Margin="10,0">
+                    <DatePicker x:Name="EndDatePicker"/>
+                    <ComboBox x:Name="EndHourComboBox" Width="60" Margin="10,0,0,0"/>
+                    <ComboBox x:Name="EndMinuteComboBox" Width="60" Margin="5,0,0,0"/>
+                </StackPanel>
 
+                <Label Grid.Row="6" Content="Description de l'événement :" VerticalAlignment="Center" Margin="10,0"/>
+                <TextBox Grid.Row="7" x:Name="EventDescriptionTextBox" Margin="10,0" TextWrapping="Wrap" AcceptsReturn="True" Height="100" VerticalScrollBarVisibility="Auto"/>
+
+                <Button Grid.Row="8" Content="Sauvegarder ✔️" Height="40" Margin="10,20" Click="SaveEventButton_Click" Style="{StaticResource GreenRoundedButtonStyle}"/>
+            </Grid>
+        </Border>
     </Grid>
 </UserControl>
