--- a/WpfAgendaDatabase/View/ViewAjouterTask.xaml
+++ b/WpfAgendaDatabase/View/ViewAjouterTask.xaml
@@ -8,18 +8,28 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Background="AliceBlue">
         <StackPanel>
-            <Label Content="Nom de la tâche :" Margin="10"/>
-            <TextBox x:Name="NomTacheTextBox" Margin="10"/>
-            <Label Content="Description de la tâche :" Margin="10"/>
-            <TextBox x:Name="TipsTextBox" Margin="10"/>
-            <Button Content="Ajouter Tâche" Click="AjouterTache_Click" Margin="10" Style="{StaticResource GreenRoundedButtonStyle}"/>
-            <ComboBox x:Name="ComboBoxTaches" DisplayMemberPath="Nom"
-          ItemsSource="{Binding Taches}"
-          Height="30" Width="200" Margin="10" />
+            <!-- Bordure pour le titre -->
+            <Border BorderBrush="Black" BorderThickness="2" Margin="10" CornerRadius="5">
+                <Label FontSize="20" FontWeight="Bold" HorizontalAlignment="Center">
+                    <TextBlock Text="Ajouter une tâche :" TextDecorations="Underline"/>
+                </Label>
+            </Border>
 
-            <!-- Bouton pour supprimer la tâche sélectionnée -->
-            <Button x:Name="SupprimerTacheButton" Content="Supprimer la tâche" 
-                Click="SupprimerTache_Click" Height="30" Width="150" Style="{StaticResource RedRoundedButtonStyle}"/>
+            <!-- Bordure pour les éléments de saisie et les boutons -->
+            <Border BorderBrush="Black" BorderThickness="2" Margin="10" CornerRadius="5" Padding="10">
+                <StackPanel>
+                    <Label Content="Nom de la tâche :" Margin="10"/>
+                    <TextBox x:Name="NomTacheTextBox" Margin="10"/>
+                    <Label Content="Description de la tâche :" Margin="10"/>
+                    <TextBox x:Name="TipsTextBox" Margin="10"/>
+                    <Button Content="Ajouter Tâche ➕" Click="AjouterTache_Click" Margin="10" Style="{StaticResource GreenRoundedButtonStyle}"/>
+                    <ComboBox x:Name="ComboBoxTaches" DisplayMemberPath="Nom"
+                              ItemsSource="{Binding Taches}"
+                              Height="30" Width="200" Margin="10" />
+                    <Button x:Name="SupprimerTacheButton" Content="Supprimer la tâche ➖" 
+                            Click="SupprimerTache_Click" Height="30" Width="150" Style="{StaticResource RedRoundedButtonStyle}"/>
+                </StackPanel>
+            </Border>
         </StackPanel>
     </Grid>
 </UserControl>
