--- a/WpfAgendaDatabase/View/ViewAjouterToDoList.xaml
+++ b/WpfAgendaDatabase/View/ViewAjouterToDoList.xaml
@@ -13,15 +13,34 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <Label Content="Titre :" Grid.Row="0" Margin="0,10" VerticalAlignment="Center"/>
-        <TextBox x:Name="textBoxTitre" Grid.Row="1" Margin="0,10" Height="20" VerticalAlignment="Center"/>
+        <Border Grid.Row="0" BorderBrush="Black" BorderThickness="2" Margin="10" CornerRadius="5">
+            <Label FontSize="20" FontWeight="Bold" HorizontalAlignment="Center">
+                <TextBlock Text="Ajouter une ToDoList :" TextDecorations="Underline"/>
+            </Label>
+        </Border>
 
-        <TextBlock Text="Date (JJ/MM/AAAA) :" Grid.Row="2" Margin="0,10" VerticalAlignment="Center"/>
-        <TextBox x:Name="textBoxDate" Grid.Row="3" Margin="0,10" Height="20" VerticalAlignment="Center"/>
+        <Border Grid.Row="1" Grid.RowSpan="5" BorderBrush="Black" BorderThickness="2" Margin="10" CornerRadius="5">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
 
-        <Button Content="Ajouter ToDoList ➕" Grid.Row="4" Margin="0,20" Click="AjouterTDL_Click" Style="{StaticResource GreenRoundedButtonStyle}"/>
+                <Label Content="Titre :" Grid.Row="0" Margin="10" VerticalAlignment="Center"/>
+                <TextBox x:Name="textBoxTitre" Grid.Row="1" Margin="10" VerticalAlignment="Center"/>
+
+                <Label Content="Date :" Grid.Row="2" Margin="10" VerticalAlignment="Center"/>
+                <DatePicker x:Name="datePickerDate" Grid.Row="3" Margin="10" HorizontalAlignment="Left"/>
+
+                <Button Content="Ajouter ToDoList ➕" Grid.Row="4" Margin="10" Height="40" Click="AjouterTDL_Click" Style="{StaticResource GreenRoundedButtonStyle}"/>
+            </Grid>
+        </Border>
     </Grid>
 </UserControl>
