--- a/WpfAgendaDatabase/View/ViewContact.xaml
+++ b/WpfAgendaDatabase/View/ViewContact.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="900">
     <Grid Background="AliceBlue">
-        <!-- Première ligne contenant les boutons et la barre de recherche -->
+
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
@@ -18,28 +18,32 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
+        <!-- Première ligne contenant le titre -->
+
         <TextBlock Grid.Row="0" FontSize="24" FontWeight="Bold" Text="Contact :" TextDecorations="Underline" Padding="5" Margin="20,10,0,0" HorizontalAlignment="Left"/>
 
+        <!-- Deuxieme ligne contenant les boutons et la barre de recherche -->
 
+        <Border Grid.Row="1" BorderBrush="Black" BorderThickness="2" CornerRadius="5" Padding="8" Margin="20,10">
+            <StackPanel Orientation="Horizontal" Margin="5">
 
-        <Border Grid.Row="1" BorderBrush="Black" BorderThickness="2" CornerRadius="5" Padding="8" Margin="20">
-            <StackPanel Orientation="Horizontal" Margin="10">
+                <Button Content="Ajouter ➕" Margin="0,10,0,10" VerticalAlignment="Top" Width="95" Height="40" Click="Button_Click_Ajouter" Style="{StaticResource GreenRoundedButtonStyle}"/>
+                <Button Content="Supprimer ➖" HorizontalAlignment="Left" Margin="10,10,0,10" VerticalAlignment="Top" Width="110" Height="40" Click="Button_Click_Supprimer" Style="{StaticResource RedRoundedButtonStyle}"/>
+                <Button Content="Réseaux Sociaux 📡" HorizontalAlignment="Left" Margin="10,10,0,10" VerticalAlignment="Top" Width="150" Height="40" Click="Button_Click_Details" Style="{StaticResource BlueRoundedButtonStyle}"/>
 
-                <Button Content="Ajouter ➕" Margin="0,12,0,0" VerticalAlignment="Top" Width="95" Click="Button_Click_Ajouter" Style="{StaticResource GreenRoundedButtonStyle}"/>
-                <Button Content="Supprimer ➖" HorizontalAlignment="Left" Margin="10,12,0,0" VerticalAlignment="Top" Width="110" Click="Button_Click_Supprimer" Style="{StaticResource RedRoundedButtonStyle}"/>
-                <Button Content="Réseaux Sociaux 📡" HorizontalAlignment="Left" Margin="10,12,0,0" VerticalAlignment="Top" Width="150" Click="Button_Click_Details" Style="{StaticResource BlueRoundedButtonStyle}"/>
+                <TextBox x:Name="SearchBox" Width="175" Margin="10,15,0,0" VerticalAlignment="Top" TextChanged="SearchBox_TextChanged" Height="30"/>
+                <Button Content="🔎" Click="Button_Click_Rechercher" Margin="10,14,0,10" VerticalAlignment="Top" Style="{StaticResource DeepBlueSilverRoundedButtonStyle}" Height="35" Width="40"/>
 
-                <TextBox x:Name="SearchBox" Width="175" Margin="10,12,0,0" VerticalAlignment="Top" TextChanged="SearchBox_TextChanged" Height="21"/>
-                <Button Content="🔎" Click="Button_Click_Rechercher" Margin="10,12,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Style="{StaticResource DeepBlueSilverRoundedButtonStyle}"/>
-
-                <Button Content="Famille" Click="FilterByRelation_Click" Margin="10,12,0,0" VerticalAlignment="Top" Style="{StaticResource DeepBlueSilverRoundedButtonStyle}" Height="26" Width="63" />
-                <Button Content="Travail" Click="FilterByRelation_Click" Margin="10,12,0,0" VerticalAlignment="Top" Style="{StaticResource DeepBlueSilverRoundedButtonStyle}" Height="26" Width="62" />
-                <Button Content="Ami" Click="FilterByRelation_Click" Margin="10,12,0,0" VerticalAlignment="Top" Width="55" Style="{StaticResource DeepBlueSilverRoundedButtonStyle}" Height="26" />
+                <Button Content="Famille" Click="FilterByRelation_Click" Margin="10,10,0,10" VerticalAlignment="Top" Style="{StaticResource DeepBlueSilverRoundedButtonStyle}" Height="40" Width="63" />
+                <Button Content="Travail" Click="FilterByRelation_Click" Margin="10,10,0,10" VerticalAlignment="Top" Style="{StaticResource DeepBlueSilverRoundedButtonStyle}" Height="40" Width="62" />
+                <Button Content="Ami" Click="FilterByRelation_Click" Margin="10,10,0,0" VerticalAlignment="Top" Width="55" Style="{StaticResource DeepBlueSilverRoundedButtonStyle}" Height="40" />
 
             </StackPanel>
         </Border>
-            <!-- Deuxième ligne contenant la DataGrid -->
-        <DataGrid Grid.Row="2" Margin="20,10,20,20" BorderBrush="DarkSlateGray" BorderThickness="3" AutoGenerateColumns="False" CanUserAddRows="False" ItemsSource="{Binding Identité}" x:Name="DataGridContacts" IsReadOnly="False" CellEditEnding="DataGridContacts_CellEditEnding">
+
+        <!-- Troisieme ligne contenant la DataGrid -->
+
+        <DataGrid Grid.Row="2" Margin="20,5,20,15" BorderBrush="DarkSlateGray" BorderThickness="3" AutoGenerateColumns="False" CanUserAddRows="False" ItemsSource="{Binding Identité}" x:Name="DataGridContacts" IsReadOnly="False" CellEditEnding="DataGridContacts_CellEditEnding">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="#" Binding="{Binding Idtable1}" Width="20"/>
                 <DataGridTextColumn Header="Nom" Binding="{Binding Nom}" Width="90"/>
@@ -50,7 +54,6 @@
                 <DataGridTextColumn Header="Date de naissance" Binding="{Binding DateDeNaissance}" Width="120"/>
                 <DataGridTextColumn Header="Ville de naissance" Binding="{Binding VilleDeNaissance}" Width="130"/>
                 <DataGridTextColumn Header="Relation" Binding="{Binding Relation}" Width="120" />
-                <!-- Add more columns as necessary -->
             </DataGrid.Columns>
         </DataGrid>
         <ContentControl Grid.Row="0" Grid.Column="0" Grid.RowSpan="3" Grid.ColumnSpan="2" x:Name="MainContent"/>
