--- a/WpfAgendaDatabase/View/ViewSocialMedia.xaml
+++ b/WpfAgendaDatabase/View/ViewSocialMedia.xaml
@@ -13,6 +13,7 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
+        <!-- Titre -->
         <Label FontWeight="Bold" HorizontalAlignment="Center" Grid.Row="0">
             <TextBlock Text="Réseaux Sociaux :" FontSize="18" TextDecorations="Underline"/>
         </Label>
@@ -39,7 +40,7 @@
             </ListView.View>
         </ListView>
 
-        <!-- Zone d'entrée pour le nom et l'URL du nouveau réseau social -->
+        <!-- Zone d'entrée pour le nom et le pseudo du nouveau réseau social -->
         <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Center" Margin="10">
             <Label Content="Nom du réseau :" VerticalAlignment="Center" Margin="5"/>
             <TextBox x:Name="TextBoxSocialMediaName" Width="150" Margin="5"/>
