--- a/WpfAgendaDatabase/MainWindow.xaml
+++ b/WpfAgendaDatabase/MainWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfAgendaDatabase"
         mc:Ignorable="d"
-        Title="MainWindow" Height="600" Width="1200">
+        Icon="Ressource/IconeAgenda.ico"
+        Title="Agenda Alexandre" Height="600" Width="1200">
     <Grid Background="AliceBlue">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*"/>
@@ -33,13 +34,14 @@
                 <Button Content="Calendrier 🗓️" Grid.Row="2" Margin="10" Click="BtnCalendrier_Click" Style="{StaticResource RoundedButtonStyle}" />
                 <Button Content="Contact ☎️" Grid.Row="3" Margin="10" Click="BtnContact_Click" Style="{StaticResource RoundedButtonStyle}"/>
                 <Button Content="To Do List 📜" Grid.Row="4" Margin="10" Click="BtnGestion_Click" Style="{StaticResource RoundedButtonStyle}"/>
-                <TextBlock Text="By : Alexandre Coene" Grid.Row="5" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Top" Foreground="LightGray" Margin="0,29,0,0"/>
-                <TextBlock Text="V2 Agenda" Grid.Row="5" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Top" Foreground="LightGray" Margin="0,61,0,0"/>
-                <!-- Vous pouvez ajouter plus de boutons si nécessaire -->
+                
+                <!-- Texte de fin -->
+                <TextBlock Text="By : Alexandre Coene" Grid.Row="5" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Top" Foreground="LightGray" Margin="0,19,0,0"/>
+                <TextBlock Text="VF Agenda" Grid.Row="5" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Top" Foreground="LightGray" Margin="0,51,0,0"/>
             </Grid>
         </Border>
-        <!-- Conteneur Droit (Vide), qui va contenir les vues -->
         
+        <!-- Conteneur (Vide), qui va contenir les vues -->
         <ContentControl x:Name="MainContent" Grid.Column="1" Background="#EEE"/>
     </Grid>
 </Window>
