--- a/WpfAgendaDatabase/View/ViewAjouterToDoList.xaml
+++ b/WpfAgendaDatabase/View/ViewAjouterToDoList.xaml
@@ -17,11 +17,15 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
+        <!--Bordure du titre-->
+        
         <Border Grid.Row="0" BorderBrush="Black" BorderThickness="2" Margin="10" CornerRadius="5">
             <Label FontSize="20" FontWeight="Bold" HorizontalAlignment="Center">
                 <TextBlock Text="Ajouter une ToDoList :" TextDecorations="Underline"/>
             </Label>
         </Border>
+
+        <!--Bordure des autres elements-->
 
         <Border Grid.Row="1" Grid.RowSpan="5" BorderBrush="Black" BorderThickness="2" Margin="10" CornerRadius="5">
             <Grid>
